again try to fix on firefox

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
-    transition: 0.4s ease-in-out;
-} /* Remove this after submission */
+    transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out, border-color 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+}
 
 [data-theme="catpuccin"] {
     --header-bg-color: rgb(36, 38, 51);
@@ -691,11 +691,13 @@ h3 {
 .project-card .project-description {
     opacity: 0;
     max-height: 0;
+    transition: all 0.3s ease;
 }
 
 .project-card:hover .project-description {
     opacity: 1;
-    max-height: 2000px;
+    max-height: 1000px;
+    transition: all 0.3s ease;
 }
 
 .project-card ul {
